--- a/2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard-ingress.yaml
+++ b/2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard-ingress.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -13,11 +13,13 @@ spec:
   - host: ##DASHBORD_URL##
     http:
       paths:
-      - backend:
-          serviceName: kubernetes-dashboard
-          servicePort: 80
-        path: /
-
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kubernetes-dashboard
+            port:
+              number: 80
   tls:
   - hosts:
       - ##DASHBORD_URL##
@@ -25,7 +27,7 @@ spec:
 
 ---
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -37,10 +39,13 @@ spec:
   - host: ##DASHBORD_URL##
     http:
       paths:
-      - backend:
-          serviceName: oauth2-proxy
-          servicePort: 4180
-        path: /oauth2
+      - path: /oauth2
+        pathType: Prefix
+        backend:
+          service:
+            name: oauth2-proxy
+            port:
+              number: 80
   tls:
   - hosts:
       - ##DASHBORD_URL##
