--- a/2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard.yaml
+++ b/2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard.yaml
@@ -46,7 +46,7 @@ subjects:
 # ------------------- Dashboard Deployment ------------------- #
 
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
